--- a/_config.yml
+++ b/_config.yml
@@ -18,17 +18,12 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+title: OpenNIC Public Key Infrastructure
+email: jonah@opennic.org
 
 # Build settings
 plugins:
   - jekyll-feed
-  - jekyll-remote-theme
 
-remote_theme: jonaharagon/jekyll-bootstrap-theme
+theme: jekyll-bootstrap-theme
 # Theme configuration information: https://github.com/jonaharagon/jekyll-bootstrap-theme
